<resources>

    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Items</string>
    <string name="Email">Email</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="Password">Password</string>
    <string name="app_name">Schedule App</string>
    <string name="Tuesday">Tues</string>
    <string name="Monday">Mon</string>
    <string name="Wednesday">Wed</string>
    <string name="Sunday">Sun</string>
    <string name="Thursday">Thurs</string>
    <string name="Friday">Fri</string>
    <string name="Saturday">Sat</string>

</resources>