<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:background="#000000">

	<TableRow
	    android:id="@+id/tableRow1"
	    android:background="#00CCCC"
		android:layout_width="fill_parent"
		android:layout_margin="1dp" 
		android:layout_height="match_parent"
		android:layout_weight="1" 
		android:gravity="center_vertical" >
		<TextView 
		    android:text="@string/Sunday"
		    android:layout_marginLeft="5dp" />
	</TableRow>

	<TableRow
		android:id="@+id/tableRow2"
		android:background="#00CCCC"
		android:layout_width="fill_parent"
		android:layout_margin="1dp" 
		android:layout_height="match_parent"
		android:layout_weight="1" 
		android:gravity="center_vertical" >
        <TextView 
            android:text="@string/Monday"
            android:layout_marginLeft="5dp" />
	</TableRow>

	<TableRow
		android:id="@+id/tableRow3"
		android:background="#00CCCC"
		android:layout_width="fill_parent"
		android:layout_margin="1dp" 
		android:layout_height="match_parent"
		android:layout_weight="1"
		android:gravity="center_vertical" >
        <TextView 
            android:text="@string/Tuesday"
            android:layout_marginLeft="5dp" />
	</TableRow>

	<TableRow
		android:id="@+id/tableRow4"
		android:background="#00CCCC"
		android:layout_width="fill_parent"
		android:layout_margin="1dp" 
		android:layout_height="match_parent"
		android:layout_weight="1"
		android:gravity="center_vertical" >
        <TextView 
            android:text="@string/Wednesday"
            android:layout_marginLeft="5dp" />
	</TableRow>
        
	<TableRow
		android:id="@+id/tableRow5"
		android:background="#00CCCC"
		android:layout_width="fill_parent"
		android:layout_margin="1dp" 
		android:layout_height="match_parent" 
		android:layout_weight="1"
		android:gravity="center_vertical" >
        <TextView 
            android:text="@string/Thursday" 
            android:layout_marginLeft="5dp" />
	</TableRow>

	<TableRow
		android:id="@+id/tableRow6"
		android:background="#00CCCC"
		android:layout_width="fill_parent"
		android:layout_margin="1dp" 
		android:layout_height="match_parent" 
		android:layout_weight="1"
		android:gravity="center_vertical" >
        <TextView 
            android:text="@string/Friday"
            android:layout_marginLeft="5dp" />
	</TableRow>

	<TableRow
		android:id="@+id/tableRow7"
		android:background="#00CCCC"
		android:layout_width="fill_parent"
		android:layout_margin="1dp" 
		android:layout_height="match_parent"
		android:layout_weight="1"
		android:gravity="center_vertical" >
        <TextView 
            android:text="@string/Saturday"
            android:layout_marginLeft="5dp" />
	</TableRow>

</TableLayout>
